--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,25 @@
         android:theme="@style/Theme.FirstApplication"
         tools:targetApi="31">
         <activity
+            android:name=".ImageActivity"
+            android:exported="false"
+            android:label="@string/title_activity_image"
+            android:theme="@style/Theme.FirstApplication" />
+        <activity
             android:name=".SecondActivity"
             android:exported="true"
             android:label="@string/title_activity_second"
             android:theme="@style/Theme.FirstApplication">
             <intent-filter>
                 <action android:name="android.intent.action.SecondActivity" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_main"
             android:theme="@style/Theme.FirstApplication">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
